# manim-express

./: .gitignore  .gitmodules  Fourier.py  LICENSE  README.md  README_zh.md  custom_config.yml  install.py  manim_imports_ext.py  nightworkflow.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_express.py  tools.py  workflow.py
.github/workflows/: python-package-conda.yml  python-publish.yml
LOGO/: README.md  custom_config.yml  start.py
LOGO/use_ppt_create_svg/: demo1.pptx
axisDemo/: run_particle.py  start.py
axisDemo/utils/: functions.py
examples/: .gitignore  code.py  custom_config.yml  example_imports.py  fourier.py  gauss.py  init.py  matrix.py  move_animation.py  plot.py  rotate_vector.py  start1.py  start2.py  the-sun-system.py
examples/Geo/: bezier.py  hilbert_draw.py  hilbert_test.py  lorenz.py  pendulum.py  rose.py
examples/ai_draw/: .gitignore  color_overlap.py  rotate_brush.py
examples/algorithm/: btrip.py
examples/animate/: MAIN.py  add_updater_and_valueTracker.py  apply_function.py  arrows.py  demo_numbers.py  douPandulum.py  pendulum.py  recamanSeq.py  simplePendulum.py  start.py  start1.py  start2.py  start2_valuetracker.py  test.py  threebody.py  傅里叶.py  傅里叶2.py  单摆.py
examples/axisDemo/: run_particle.py  scatter.py
examples/camera/: code.py  code1.py  start.py
examples/color/: start.py
examples/deep_learning/: conv.py  diffusion.py  nn.py
examples/experimental/: 1.py
examples/geometry/: particle.py  start.py  utils.py
examples/jupyter/: start.ipynb
examples/lines/: start.py
examples/load_code/: start.py
examples/load_pictures/: start.py  svgLoader.py  test.py
examples/logo_design/: demo1.py
examples/plot/: cnn.py  imshow.py  lines.py  plot-new.py  plot.py  scatter_example.py  start.py  test.py  test2.py
examples/rotate/: rotate2.py  rotate_vector.py
examples/rotation/: rotate2.py  rotate_vector.py
examples/surface/: start.py  texture.py  (+1 more)
geometry/: particle.py  start.py  utils.py
manim_express/: .gitignore  __init__.py  aaaaaaaaaaaaa.txt  color.py  eager.py  hand_draw.py  jupyter.py  onlinetex.py  plot.py  points.py  start.py  surface.py  tools.py  utils.py  version-config.yaml
manim_express_tests/: auto_axis.py  hand_draw.py  rough.py  surface.py  test.py  tests_import.py
(+36 files in other folders)
