[metadata]
name = manim_express
version = 0.4.7
author = kunyuan
author-email = beidongjiedeguang@gmail.com
summary = Animation engine for explanatory math videos
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/beidongjiedeguang/manim-express
project_urls =
    Bug Tracker = https://github.com/beidongjiedeguang/manim-express/issues
    Source Code = https://github.com/beidongjiedeguang/manim-express
license = MIT
classifier =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
keywords =
    Computer Vision
    Mathematics
    Physics
    Machine Learning
    Neural Networks

[files]
packages =
    manim_express
data_files =
    manim_express = manim_express/*

[entry_points]
console_scripts =
    manim-express = manimlib.__main__:main