[metadata]
name = manim_express
author = kunyuan
author-email = beidongjiedeguang@gmail.com
summary = Animation engine for explanatory math videos
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/beidongjiedeguang/manim-express
project_urls =
    Bug Tracker = https://github.com/beidongjiedeguang/manim-express/issues
    Source Code = https://github.com/beidongjiedeguang/manim-express
license = MIT
classifier =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
keywords =
    Computer Vision
    Mathematics
    Physics
    Machine Learning
    Neural Networks

[files]
packages =
    manim_express
data_files =
    manim_express = manim_express/*

[options]
packages = find:
python_requires = >= 3.7

[requirements-files]
install_requires = requirements.txt
extras_require =
  dev = requirements-dev.txt

[entry_points]
console_scripts =
    manim-express = manimlib.__main__:main